backend/dax/generated/DAXParser.py
# Generated from backend/dax/grammar/DAXParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DAXParser ( Parser ):

    grammarFileName = "DAXParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'||'", "'&&'", "<INVALID>", "<INVALID>", 
                     "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'&'", "'^'", "'('", "')'", "'{'", "'}'", 
                     "','", "'.'", "'::'" ]

    symbolicNames = [ "<INVALID>", "VAR", "RETURN", "IN", "NOT", "OR_OP", 
                      "AND_OP", "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "PLUS", 
                      "MINUS", "STAR", "SLASH", "PERCENT", "AMP", "POW", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "DOT", 
                      "COLON2", "TABLE_NAME", "BRACKET_IDENT", "STRING", 
                      "DATE_LITERAL", "DATETIME_LITERAL", "NUMBER", "IDENTIFIER", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_parse = 0
    RULE_expression = 1
    RULE_varBlock = 2
    RULE_varBinding = 3
    RULE_logicalOr = 4
    RULE_logicalAnd = 5
    RULE_comparison = 6
    RULE_additive = 7
    RULE_multiplicative = 8
    RULE_concatenation = 9
    RULE_unary = 10
    RULE_power = 11
    RULE_primary = 12
    RULE_literal = 13
    RULE_functionCall = 14
    RULE_argumentList = 15
    RULE_functionName = 16
    RULE_qualifiedReference = 17
    RULE_tableQualifier = 18
    RULE_standaloneReference = 19
    RULE_bareTableReference = 20
    RULE_identifier = 21
    RULE_identifierPart = 22
    RULE_tableConstructor = 23
    RULE_tupleConstructor = 24

    ruleNames =  [ "parse", "expression", "varBlock", "varBinding", "logicalOr", 
                   "logicalAnd", "comparison", "additive", "multiplicative", 
                   "concatenation", "unary", "power", "primary", "literal", 
                   "functionCall", "argumentList", "functionName", "qualifiedReference", 
                   "tableQualifier", "standaloneReference", "bareTableReference", 
                   "identifier", "identifierPart", "tableConstructor", "tupleConstructor" ]

    EOF = Token.EOF
    VAR=1
    RETURN=2
    IN=3
    NOT=4
    OR_OP=5
    AND_OP=6
    EQ=7
    NEQ=8
    LTE=9
    GTE=10
    LT=11
    GT=12
    PLUS=13
    MINUS=14
    STAR=15
    SLASH=16
    PERCENT=17
    AMP=18
    POW=19
    LPAREN=20
    RPAREN=21
    LBRACE=22
    RBRACE=23
    COMMA=24
    DOT=25
    COLON2=26
    TABLE_NAME=27
    BRACKET_IDENT=28
    STRING=29
    DATE_LITERAL=30
    DATETIME_LITERAL=31
    NUMBER=32
    IDENTIFIER=33
    LINE_COMMENT=34
    BLOCK_COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(DAXParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(DAXParser.EOF, 0)

        def getRuleIndex(self):
            return DAXParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = DAXParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.expression()
            self.state = 51
            self.match(DAXParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DAXParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAXParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varBlock(self):
            return self.getTypedRuleContext(DAXParser.VarBlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarExpression" ):
                listener.enterVarExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarExpression" ):
                listener.exitVarExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarExpression" ):
                return visitor.visitVarExpression(self)
            else:
                return visitor.visitChildren(self)


    class LogicalExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAXParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicalOr(self):
            return self.getTypedRuleContext(DAXParser.LogicalOrContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpression" ):
                listener.enterLogicalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpression" ):
                listener.exitLogicalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpression" ):
                return visitor.visitLogicalExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = DAXParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = DAXParser.VarExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.varBlock()
                pass
            elif token in [2, 3, 4, 13, 14, 20, 22, 27, 28, 29, 30, 31, 32, 33]:
                localctx = DAXParser.LogicalExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.logicalOr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.VAR)
            else:
                return self.getToken(DAXParser.VAR, i)

        def varBinding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.VarBindingContext)
            else:
                return self.getTypedRuleContext(DAXParser.VarBindingContext,i)


        def RETURN(self):
            return self.getToken(DAXParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(DAXParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DAXParser.RULE_varBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarBlock" ):
                listener.enterVarBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarBlock" ):
                listener.exitVarBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarBlock" ):
                return visitor.visitVarBlock(self)
            else:
                return visitor.visitChildren(self)




    def varBlock(self):

        localctx = DAXParser.VarBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(DAXParser.VAR)
            self.state = 58
            self.varBinding()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 59
                self.match(DAXParser.VAR)
                self.state = 60
                self.varBinding()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(DAXParser.RETURN)
            self.state = 67
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarBindingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DAXParser.IdentifierContext,0)


        def EQ(self):
            return self.getToken(DAXParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(DAXParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DAXParser.RULE_varBinding

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarBinding" ):
                listener.enterVarBinding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarBinding" ):
                listener.exitVarBinding(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarBinding" ):
                return visitor.visitVarBinding(self)
            else:
                return visitor.visitChildren(self)




    def varBinding(self):

        localctx = DAXParser.VarBindingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varBinding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.identifier()
            self.state = 70
            self.match(DAXParser.EQ)
            self.state = 71
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.LogicalAndContext)
            else:
                return self.getTypedRuleContext(DAXParser.LogicalAndContext,i)


        def OR_OP(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.OR_OP)
            else:
                return self.getToken(DAXParser.OR_OP, i)

        def getRuleIndex(self):
            return DAXParser.RULE_logicalOr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOr" ):
                listener.enterLogicalOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOr" ):
                listener.exitLogicalOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOr" ):
                return visitor.visitLogicalOr(self)
            else:
                return visitor.visitChildren(self)




    def logicalOr(self):

        localctx = DAXParser.LogicalOrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_logicalOr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.logicalAnd()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 74
                self.match(DAXParser.OR_OP)
                self.state = 75
                self.logicalAnd()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(DAXParser.ComparisonContext,i)


        def AND_OP(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.AND_OP)
            else:
                return self.getToken(DAXParser.AND_OP, i)

        def getRuleIndex(self):
            return DAXParser.RULE_logicalAnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAnd" ):
                listener.enterLogicalAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAnd" ):
                listener.exitLogicalAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAnd" ):
                return visitor.visitLogicalAnd(self)
            else:
                return visitor.visitChildren(self)




    def logicalAnd(self):

        localctx = DAXParser.LogicalAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logicalAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.comparison()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 82
                self.match(DAXParser.AND_OP)
                self.state = 83
                self.comparison()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def concatenation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.ConcatenationContext)
            else:
                return self.getTypedRuleContext(DAXParser.ConcatenationContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.EQ)
            else:
                return self.getToken(DAXParser.EQ, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.NEQ)
            else:
                return self.getToken(DAXParser.NEQ, i)

        def LTE(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.LTE)
            else:
                return self.getToken(DAXParser.LTE, i)

        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.LT)
            else:
                return self.getToken(DAXParser.LT, i)

        def GTE(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.GTE)
            else:
                return self.getToken(DAXParser.GTE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.GT)
            else:
                return self.getToken(DAXParser.GT, i)

        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.IN)
            else:
                return self.getToken(DAXParser.IN, i)

        def getRuleIndex(self):
            return DAXParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = DAXParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.concatenation()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8072) != 0):
                self.state = 90
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8072) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 91
                self.concatenation()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.MultiplicativeContext)
            else:
                return self.getTypedRuleContext(DAXParser.MultiplicativeContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.PLUS)
            else:
                return self.getToken(DAXParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.MINUS)
            else:
                return self.getToken(DAXParser.MINUS, i)

        def getRuleIndex(self):
            return DAXParser.RULE_additive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive" ):
                listener.enterAdditive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive" ):
                listener.exitAdditive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditive" ):
                return visitor.visitAdditive(self)
            else:
                return visitor.visitChildren(self)




    def additive(self):

        localctx = DAXParser.AdditiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_additive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.multiplicative()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 98
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                self.multiplicative()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.UnaryContext)
            else:
                return self.getTypedRuleContext(DAXParser.UnaryContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.STAR)
            else:
                return self.getToken(DAXParser.STAR, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.SLASH)
            else:
                return self.getToken(DAXParser.SLASH, i)

        def PERCENT(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.PERCENT)
            else:
                return self.getToken(DAXParser.PERCENT, i)

        def getRuleIndex(self):
            return DAXParser.RULE_multiplicative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicative" ):
                listener.enterMultiplicative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicative" ):
                listener.exitMultiplicative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicative" ):
                return visitor.visitMultiplicative(self)
            else:
                return visitor.visitChildren(self)




    def multiplicative(self):

        localctx = DAXParser.MultiplicativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_multiplicative)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.unary()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0):
                self.state = 106
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.unary()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConcatenationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.AdditiveContext)
            else:
                return self.getTypedRuleContext(DAXParser.AdditiveContext,i)


        def AMP(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.AMP)
            else:
                return self.getToken(DAXParser.AMP, i)

        def getRuleIndex(self):
            return DAXParser.RULE_concatenation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcatenation" ):
                listener.enterConcatenation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcatenation" ):
                listener.exitConcatenation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcatenation" ):
                return visitor.visitConcatenation(self)
            else:
                return visitor.visitChildren(self)




    def concatenation(self):

        localctx = DAXParser.ConcatenationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_concatenation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.additive()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 114
                self.match(DAXParser.AMP)
                self.state = 115
                self.additive()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self):
            return self.getTypedRuleContext(DAXParser.UnaryContext,0)


        def NOT(self):
            return self.getToken(DAXParser.NOT, 0)

        def PLUS(self):
            return self.getToken(DAXParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(DAXParser.MINUS, 0)

        def power(self):
            return self.getTypedRuleContext(DAXParser.PowerContext,0)


        def getRuleIndex(self):
            return DAXParser.RULE_unary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary" ):
                listener.enterUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary" ):
                listener.exitUnary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnary" ):
                return visitor.visitUnary(self)
            else:
                return visitor.visitChildren(self)




    def unary(self):

        localctx = DAXParser.UnaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_unary)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 24592) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 122
                self.unary()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.power()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PowerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DAXParser.PrimaryContext)
            else:
                return self.getTypedRuleContext(DAXParser.PrimaryContext,i)


        def POW(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.POW)
            else:
                return self.getToken(DAXParser.POW, i)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.PLUS)
            else:
                return self.getToken(DAXParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(DAXParser.MINUS)
            else:
                return self.getToken(DAXParser.MINUS, i)

        def getRuleIndex(self):
            return DAXParser.RULE_power

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPower" ):
                listener.enterPower(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPower" ):
                listener.exitPower(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPower" ):
                return visitor.visitPower(self)
            else:
                return visitor.visitChildren(self)




    def power(self):

        localctx = DAXParser.PowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_power)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.primary()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 127
                self.match(DAXParser.POW)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13 or _la==14:
                    self.state = 128
                    _la = self._input.LA(1)
                    if not(_la==13 or _la==14):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 131
                self.primary()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DAXParser.RULE_primary

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class QualifiedReferencePrimaryContext(PrimaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DAXParser.PrimaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def qualifiedReference(self):
            return self.getTypedRuleContext(DAXParser.QualifiedReferenceContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedReferencePrimary" ):
                listener.enterQualifiedReferencePrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedReferencePrimary" ):
                listener.exitQualifiedReferencePrimary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedReferencePrimary" ):
                return visitor.visitQualifiedReferencePrimary(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierPrimaryContext(PrimaryContext):
